refactor: SOLID and Clean Code improvements - SLF4J, toList(), DRY Direccion, remove try-catch antipattern, dev profile, fix deprecated property